# tefl

./: .gitignore  README.md  app.py  basketball_reference_urls.py  caches.py  emojis.py  gamelog.py  games.py  injury_reports.py  live_scores.py  player_gamelog.py  players.db  players.py  players_db.py  pyproject.toml  requirements.txt  save_players_to_db.py  scoreboard.py  scores.py  teams.py  ttfl_averages.py  urls.py
data/: caches.py  game_location.py  game_result.py  game_stats.py  game_ttfl_stats.py  injured_player.py  player.py  player_game.py  player_game2.py  player_gamelog.py  player_injury_status.py  player_live_game.py  player_live_game_info.py  player_status.py  player_ttfl_score.py  team.py  team_game.py  team_injury_report.py  team_injury_report_status.py  team_top_scores.py
database/: player_repository.py  players.db  players_db.py  save_players_to_db.py
functions/: common.py  gamelog.py  injury_reports.py  live_scores.py  player_gamelog.py
pages/: common.py  home.py  injury_report.py  live_scores.py  player_gamelog.py  players.py
routes/: injury_report.py  injury_report_html.py  live_scores_html.py  player_gamelog.py  players.py  players_list.py
tefl/: app.py  bottle_app.py  espn_urls.py  injury_reports.py  main.py  player.py  rosters.py  teams.py  ttfl_totals.py
ttfl/: app.py  espn_urls.py  injury_reports.py  main.py  player_gamelog.py  players.db  players.py  players_db.py  rosters.py  teams.py  ttfl_totals.py
