[tool.poetry]
name = "tefl"
version = "0.1.0"
description = ""
authors = ["thiapathioly"]

[tool.poetry.dependencies]
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
Flask = "^2.2.2"
pyfunctional = "^1.4.3"
pymonet = "^0.12.0"
python = "^3.11"
requests = "^2.28.1"
tinyhtml = "^1.2.0"
toolz = "^0.12.0"
unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

ignore_missing_imports = true

[tool.mypy]
no_implicit_optional=true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "transformers",
    "datasets",
]
ignore_missing_imports = true
